package com.laurenci.hydrotrack.service.user;

public record NewUserDto(Long id, String username) {
}
